Done with Assignment

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>HTML Images</title>
+</head>
+
+<body>
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="this is Simba,the largest lion in southern savanna"
+    title="King of the Jungle" />
+
+  <img src="..my computer/JNNA./images/military car" alt="the strongest military vehicle in kenya"
+    title="Armored vehicles" />
+  <img src="https:=most+beautiful+girl+in+the+world&rlz=1C1BNSD_enKE993KE994&oq=most+beautiful+girl&aqs"
+    alt="this Queen Makena the most beautiful girl in the world from Meru county" title="Queen Makena" </body>
+
 </html>
